Fix QuickSearch having y overflow due to KaTeX MathML being absolutely positioned at bottom

--- a/frontend/src/components/Navbar/QuickSearch/QuickSearchBox.module.css
+++ b/frontend/src/components/Navbar/QuickSearch/QuickSearchBox.module.css
@@ -103,8 +103,8 @@
       )
     )
   );
-  box-sizing: content-box;
   overflow: hidden auto;
+  position: relative;
 
   /* Apply same amount padding as modal padding, so content is aligned with other
   things that haven't received a margin undo */
